# pathroot

./: README.md  pathroot.py  pyproject.toml  test_pathroot.py
.github/: ci.yaml
.github/workflows/: main.yml
