[project]
name = "pathroot"
version = "1.0.0"
description = "Subclass of a pathlib.Path object that does not allow traversal outside of a trusted root."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [{ name = "Josh Schneider", email = "josh.schneider@gmail.com" }]
maintainers = [{ name = "Josh Schneider", email = "josh.schneider@gmail.com" }]
license = "MIT"
keywords = ["path", "pathlib", "filesystem"]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pathroot"]